--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -87,7 +87,8 @@
 #TabsToolbar:not([collapsed="true"]) + #nav-bar {
   border-top: 1px solid hsla(0,0%,0%,.3) !important;
   background-clip: padding-box;
-  margin-top: -1px; 
+  
+  margin-top: calc(-1 * var(--navbar-tab-toolbar-highlight-overlap));
   
   position: relative;
   z-index: 1;
@@ -1568,7 +1569,7 @@ richlistitem[type~="action"][actiontype="switchtab"] > .ac-url-box > .ac-action-
 }
 
 #TabsToolbar .toolbarbutton-1 {
-  margin-bottom: var(--tab-toolbar-navbar-overlap);
+  margin-bottom: var(--navbar-tab-toolbar-highlight-overlap);
 }
 
 #alltabs-button {
