--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -308,7 +308,8 @@
 }
 
 #TabsToolbar:not([collapsed="true"]) + #nav-bar {
-  margin-top: -1px; 
+  
+  margin-top: calc(-1 * var(--navbar-tab-toolbar-highlight-overlap));
   
   position: relative;
   z-index: 1;
@@ -928,7 +929,7 @@ toolbarbutton[constrain-size="true"][cui-areatype="toolbar"] > .toolbarbutton-ba
 }
 
 #TabsToolbar .toolbarbutton-1 {
-  margin-bottom: var(--tab-toolbar-navbar-overlap);
+  margin-bottom: var(--navbar-tab-toolbar-highlight-overlap);
 }
 
 #TabsToolbar .toolbarbutton-1:not([disabled=true]):hover,
