--- a/browser/components/loop/content/shared/css/common.css
+++ b/browser/components/loop/content/shared/css/common.css
@@ -586,7 +586,10 @@ html[dir="rtl"] .context-wrapper > .context-preview {
 }
 
 .clicks-allowed.context-wrapper:hover {
-  background-color: #dbf7ff;
+  border: 2px solid #5cccee;
+  
+
+  padding: calc(.8em - 1px);
 }
 
 
