--- a/browser/components/loop/content/css/panel.css
+++ b/browser/components/loop/content/css/panel.css
@@ -297,6 +297,8 @@ html[dir="rtl"] .tab-view li:nth-child(2).selected ~ .slide-bar {
 
 .rooms {
   min-height: 100px;
+  
+  position: relative;
 }
 
 .rooms > h1 {
@@ -372,7 +374,8 @@ html[dir="rtl"] .tab-view li:nth-child(2).selected ~ .slide-bar {
 
 .room-list {
   max-height: 335px; 
-  min-height: 7px;
+  
+  min-height: 100px;
   overflow: auto;
 }
 
@@ -392,7 +395,8 @@ html[dir="rtl"] .tab-view li:nth-child(2).selected ~ .slide-bar {
   line-height: 2.4rem;
   color: #000;
   
-  width: calc(100% - 1rem - 16px);
+
+  width: calc(100% - 1rem - 56px);
 }
 
 .room-list > .room-entry.room-active > h2 {
@@ -488,12 +492,75 @@ html[dir="rtl"] .tab-view li:nth-child(2).selected ~ .slide-bar {
 }
 
 
+.room-entry-context-actions {
+  display: none;
+  border-radius: 30px;
+  background: #56b397;
+  vertical-align: top;
+}
+
+.room-entry:hover .room-entry-context-actions {
+  display: inline-block;
+}
+
+.room-entry:hover .room-entry-context-actions:hover {
+  background: #50e3c2;
+}
+
+
+.room-entry-call-btn {
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
+  background-color: transparent;
+  background-image: url("../shared/img/icons-14x14.svg#video-white");
+  background-position: right center;
+}
+
+html[dir="rtl"] .room-entry-call-btn {
+  background-position: left center;
+}
+
+
+.room-entry-context-menu-chevron {
+  display: inline-block;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+  background-image: url("../shared/img/icons-10x10.svg#dropdown-white");
+  background-position: center;
+  cursor: pointer;
+}
+
+
+.room-entry-context-menu-chevron,
+.room-entry-call-btn {
+  width: 30px;
+  height: 24px;
+  background-size: 12px;
+  background-repeat: no-repeat;
+  vertical-align: middle;
+}
+
+html[dir="rtl"] .room-entry-context-actions > .dropdown-menu {
+  right: auto;
+  left: 45px;
+}
+
+.room-entry-context-actions > .dropdown-menu {
+  right: 45px;
+  bottom: auto;
+  left: auto;
+}
+
 
 .room-entry-context-item {
   display: inline-block;
   vertical-align: middle;
   -moz-margin-start: 1rem;
   height: 16px;
+}
+
+.room-entry:hover .room-entry-context-item {
+  display: none;
 }
 
 .room-entry-context-item > a > img {
