--- a/browser/themes/shared/devtools/animationinspector.css
+++ b/browser/themes/shared/devtools/animationinspector.css
@@ -238,7 +238,7 @@ body {
   border: 1px solid var(--timelime-border-color);
 
   
-  background: var(--timeline-background-color);
+  background-color: var(--timeline-background-color);
 }
 
 .animation-timeline .animation .cssanimation {
